# Kulitta

./: BachStat.lhs  ChordSpaces.lhs  ClassicalFG.lhs  Constraints.lhs  CorpusGen.lhs  CykParser.lhs  EuterpeaSpecial.lhs  Examples.lhs  IOWidgets.lhs  InsideOutside.lhs  JazzFG.lhs  Kulitta.cabal  Kulitta.lhs  KulittaBackend.lhs  LICENSE  Learning.lhs  LearningMain.lhs  ModeSpace.lhs  MusicGrammars.lhs  OtherPTGGs.lhs  PCFGtoPTGG.lhs  PTGG.lhs  Parser.lhs  PerfTest.lhs  PlayK.lhs  PostProc.lhs  README.txt  Search.lhs  TemporalGen.lhs  Vesicularia.lhs  majorProbs2.txt  pcfg.txt  settings.txt  test.mid
Examples/: Examples.lhs
Examples/GUI/: GUI.lhs  GUIBackend.lhs  IOWidgets.lhs  PlayK.lhs  build.bat  majorProbs.txt  minorProbs.txt  minorProbs2.txt  term.txt
Kulitta/: ChordSpaces.lhs  Constraints.lhs  EuterpeaSpecial.lhs  Foregrounds.lhs  PTGG.lhs  PostProc.lhs  QuotientSpaces.lhs  Search.lhs
Kulitta/ChordSpaces/: ModeSpace.lhs  OPTIC.lhs
Kulitta/Foregrounds/: ClassicalFG.lhs  JazzFG.lhs  SimplePianoFG.lhs
Kulitta/GUI/: GUI.lhs  GUIBackend.lhs  PlayK.lhs
Kulitta/Grammars/: MusicGrammars.lhs
Kulitta/Learning/: CykParser.lhs  InsideOutside.lhs  Learning.lhs  LearningMain.lhs  PCFGtoPTGG.lhs  Parser.lhs  TemporalGen.lhs
output/: Chorale_0.mid  Chorale_0.txt  Chorale_443576165.txt  Chorale_761560750.mid  Chorale_761560750.txt  Chorale_761560750_piano.mid  Chorale_990540431.mid  Chorale_990540431.txt
output/nice/: Chorale_443576165.mid  (+4 more)
sampleConfig/: configTSDx5.txt
vesicularia/: line1.mid  line2.mid  line3.mid  line4.mid  line5.mid  line6.mid  line7.mid  line8.mid  part1.mid  part1r.mid  part2.mid  t1Bass.mid  t1arp1.mid  t1arp2.mid  t1chordsFG.mid  t1chordsFG2.mid  t1chordsM.mid  vesicularia.mid
(+806 files in other folders)
